--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.26.2"
   },
